--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
--i https://pypi.org/simple
-datasets==2.14.5; python_full_version >= '3.8.0'
-faiss-cpu==1.7.4
-langchain==0.0.304
-numpy==1.25.2; python_version >= '3.9'
-openai==0.28.0; python_full_version >= '3.7.1'
-requests==2.31.0; python_version >= '3.7'
-# safetensors==0.3.3
-streamlit==1.26.0; python_version >= '3.8' and python_full_version != '3.9.7'
-tokenizers==0.13.3
+datasets==3.6.0
+faiss-cpu==1.11.0
+huggingface_hub==0.33.0
+langchain==0.3.26
+numpy==2.3.1
+openai==1.90.0
+pandas==2.3.0
+streamlit==1.46.0
+torch==2.7.1
+transformers==4.52.4
